Use records for tool list, cleanup